Appleにあたり + Sphereにしてみた

--- a/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
+++ b/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
@@ -3,6 +3,7 @@
 	"Components" :
 	{
 		"Draw" : "Draw/Apple.Draw.json",
-		"Eatable" : "Eatable/Apple.Eatable.json"
+		"Eatable" : "Eatable/Apple.Eatable.json",
+		"Physics" : "Physics/Apple.Physics.json"
 	}
 }
