SensorコンポネントとSensorDirector追加.コンポーネントにpost_updateを追加2

--- a/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
+++ b/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
@@ -4,6 +4,7 @@
 	{
 		"Draw" : "Draw/Apple.Draw.json",
 		"Eatable" : "Eatable/Apple.Eatable.json",
+		"Sensor" : "Sensor/Apple.Sensor.json",
 		"Physics" : "Physics/Apple.Physics.json"
 	}
 }
