IEatableはいくつかの状態を持てるように

--- a/Simulator/Sandbox2D/ActorData/Eatable/Apple.Eatable.json
+++ b/Simulator/Sandbox2D/ActorData/Eatable/Apple.Eatable.json
@@ -1,3 +1,13 @@
 {
-	"IsEnableEat" : true
+  "EatableParams" :
+  [
+    {
+      "Condition" : "Default",
+	  "IsEnableEat" : true
+    },
+    {
+      "Condition" : "Rot",
+      "IsEnableEat" : false
+    }
+  ]
 }
