--- a/Simulator/Sandbox2D/ActorData/Eatable/Apple.Eatable.json
+++ b/Simulator/Sandbox2D/ActorData/Eatable/Apple.Eatable.json
@@ -3,7 +3,8 @@
   [
     {
       "Condition" : "Default",
-	  "IsEnableEat" : true
+	  "IsEnableEat" : true,
+	  "IsDefault" : true
     },
     {
       "Condition" : "Rot",
