ObjectのデータとGameDataを分けた

--- a/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
+++ b/Simulator/Sandbox2D/ActorData/Actor/Apple.Actor.json
@@ -2,10 +2,7 @@
 	"Name" : "Apple",
 	"ObjectComponents":
 	{
-		"Physics" :
-		{
-			"SettingPath" : "Physics/Apple.Physics.json"
-		}
+		"SettingPath" : "ObjectComponents/Object/Apple.Object.json"
 	},
 	"GameDataComponents" :
 	{
