アクターの生死仮実装

--- a/Simulator/Sandbox/ActorData/ObjectComponents/Object/Apple.Object.json
+++ b/Simulator/Sandbox/ActorData/ObjectComponents/Object/Apple.Object.json
@@ -5,6 +5,10 @@
 		"Physics" :
 		{
 			"SettingPath" : "Physics/Apple.Physics.json"
+		},
+		"Life" :
+		{
+			"SettingPath" : "Life/Apple.Life.json"
 		}
 	}
 }
