衝突と経年劣化によるLife減少を仮実装

--- a/Simulator/Sandbox/Data/Simulator/Material/Apple.Material.json
+++ b/Simulator/Sandbox/Data/Simulator/Material/Apple.Material.json
@@ -1,4 +1,4 @@
 {
-	"Hardness" : 1,
-	"Density" : 1
+	"Physics" : "Physics/NormalFruit.Physics.json",
+	"Chemical" : "Chemical/NormalFruit.Chemical.json"
 }
