アイテム取得を仮つなぎ

--- a/Simulator/Sandbox/ActorData/Actor/Apple.Actor.json
+++ b/Simulator/Sandbox/ActorData/Actor/Apple.Actor.json
@@ -6,6 +6,7 @@
 	},
 	"GameLogicComponents" :
 	{
+		"Item" : "Item/Apple.Item.json",
 		"Sensor" : "Sensor/Apple.Sensor.json"
 	},
 	"GameDataComponents" :
