MetaAIをシングルトン風にして、アクターの生成登録を行えるように

--- a/Simulator/Sandbox/ActorData/Actor/AppleSeed.Actor.json
+++ b/Simulator/Sandbox/ActorData/Actor/AppleSeed.Actor.json
@@ -2,6 +2,7 @@
 	"Name" : "AppleSeed",
 	"ObjectComponents":
 	{
+		"SettingPath" : "ObjectComponents/Object/AppleSeed.Object.json"
 	},
 	"GameLogicComponents" :
 	{
