地中に埋められるようにGenerateActorにOffset項目追加

--- a/Simulator/Sandbox/Data/Item/AppleSeed.Item.json
+++ b/Simulator/Sandbox/Data/Item/AppleSeed.Item.json
@@ -2,6 +2,15 @@
 	"Type" : "Other",
 	"Effect" :
 	{
-		"GenerateActor" : "AppleSeed"
+		"GenerateActor" : 
+		{
+			"Actor" : "AppleSeed",
+			"Offset" :
+			{
+				"X" : 0.0,
+				"Y" : -64.0,
+				"Z" : 0.0
+			}
+		}
 	}
 }
